--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@testing-library/user-event": "^12.8.3",
     "aws-amplify": "^4.3.8",
     "axios": "^0.24.0",
+    "date-fns": "^2.28.0",
     "formik": "^2.2.9",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
@@ -56,6 +58,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.8.8",
+    "eslint": "^7.32.0",
     "postcss": "^7.0.39",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   }
