--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-responsive-carousel": "^3.2.22",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
