--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-range": "^1.8.12",
     "react-responsive-carousel": "^3.2.22",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-spinners": "^0.11.0",
     "react-table": "^7.7.0",
     "react-toastify": "^8.1.0",
+    "recharts": "^2.1.9",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.11"
   },
